<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Thing Tracker</string>
    <string name="add_happening">Add Happening</string>
    <string name="action_settings">Settings</string>
    <string name="delete">Delete</string>
    <string name="add_child">Add Child</string>
    <string name="save">Save</string>
    <string name="title_thing_list">Things</string>
    <string name="title_thing_detail">Thing Detail</string>
    <string name="title_activity_add_happening">Add Happening</string>
    <string name="spacer">" "</string>
    <string name="view_happenings">View Happenings</string>
    <string name="title_activity_view_happenings">View Happenings</string>
    <string name="hello_world">Hello world!</string>
    <string name="edit_thing">Edit Thing Fields</string>
    <string name="title_activity_edit_thing">EditThing</string>
    <string name="thing_name">Thing Name</string>
    <string name="thing_metadata">Thing Metadata</string>
    <string name="view_all_happenings">View All Happenings</string>
    <string name="date">Change Date</string>
    <string name="addhour">Add Hour</string>
    <string name="addminute">Add Minute</string>

</resources>
